--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html>   <!--A52A2A-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -187,26 +187,30 @@
 
 
       <!-- FOOTER -->
-      <footer class="container-fluid">
+      <footer class="container-fluid" style = "background-color:#561818">
         <div class = "row">
-          <div class = "col-md-3">
-            <ul>
-              <li>Home</li>
-              <li>About Us</li>
-              <li>Contact Us</li>
-            </ul>
+          <div class = "col-md-12">
+              <h3 style = "margin-left:500px">Home | About Us | Contact Us </h3>
           </div>
 
-          <div class = "col-md-3">
-            <h3>Office Address: VCA Complex, Shop No. 39 & 40, Civil Lines, Nagpur - 440001 <br/ ><br />Landmark Near C.K. Naidu Square  </h3>
+          <div class = "col-md-6">
+            <h3><u>Office Address:</u> VCA Complex, Shop No. 39 & 40, Civil Lines, Nagpur - 440001 Landmark Near C.K. Naidu Square</h3>
           </div>
 
-          <div class = "col-md-3">
-            <h3>Factory Address: Mondha Village, Taluka Hingna, Dist : Nagpur, 440016 <br/ ><br />Landmark Near C.K. Naidu Square  </h3>
+          <div class = "col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3722.0217511199494!2d78.98633131499459!3d21.111698985953478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c00be8c2163d%3A0x77e838961130e12d!2sWood+Mould+Pvt+Ltd!5e0!3m2!1sen!2sus!4v1558223863129!5m2!1sen!2sus" width="600" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
 
-          <div class = "col-md-3">
-            <h3><img src = "../images/facebook.png"></h3>
+          <div class = "col-md-6">
+            <h3><u>Factory Address:</u> Mondha Village, Taluka Hingna, Dist : Nagpur, 440016</h3>
+          </div>
+
+          <div class = "col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.8829694232895!2d79.07498311499538!3d21.157055185928986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c0e546040261%3A0xc48d62fb3241653c!2sVCA+Stadium+Complex%2C+Civil+Lines%2C+Nagpur%2C+Maharashtra+440001%2C+India!5e0!3m2!1sen!2sus!4v1558224181461!5m2!1sen!2sus" width="600" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+
+          <div class = "col-md-12">
+            <center><h3><img src = "../images/facebook.png" />+91 - 9822571094 | info@woodmouldindia.com</h3></center>
           </div>
         </div>
       </footer>
