--- a/html/tables.html
+++ b/html/tables.html
@@ -1,18 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+
 <style>
-  .item img {
-  max-width: 100%;
-
-  -moz-transition: all 0.3s;
+  .item img{
+    -moz-transition: all 0.3s;
   -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
+  transition: all 0.5s;
+  }
 
-.item:hover img {
+  .item:hover img {
   -moz-transform: scale(1.1);
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 </style>
-<div class = "item">
- <img src = "../images/left.jpg" width = "500" height = "400"/>
+<body>
+
+<div class="container-fluid">
+  <table class="table table-bordered">
+    <!-- <thead>
+      <tr class = "item">
+        <th><img src = "../images/left.jpg" width = "200" height = "200" /></th>
+        <th><img src = "../images/left.jpg" width = "200" height = "200" /></th>
+        <th><img src = "../images/left.jpg" width = "200" height = "200" /></th>
+      </tr>
+    </thead> -->
+    <tbody>
+      <tr class = "item">
+        <td align = "center"><img src = "../images/left.jpg" width = "234" height = "268" /></td>
+        <td align = "center"><img src = "../images/left.jpg" width = "234" height = "268" /></td>
+        <td align = "center"><img src = "../images/left.jpg" width = "234" height = "268" /></td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
+
+</body>
+</html>
