added common header and script to load the common header

--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,18 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
+    </script>
+    <script>
+   $(function(){
+   $("#header").load("commonHeader.html");
+ })
+   </script>
     <title>Wood Mould India</title>
 
     <!-- Custom styles for this template -->
@@ -17,47 +25,10 @@
     <link href="../css/index.css"    rel="stylesheet">
   </head>
   <body>
+    <header id ="header">
 
-    <header>
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light stick-top">
-        <a class="navbar-brand" href="#"><img src="../images/woodmould-logo.png" /></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tables</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Chairs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Beds</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sofa Sets</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Accessories</a>
-            </li>
-          </ul>
-          <form class="form-inline mt-2 mt-md-0">
-            <p> +91 - 9822571094 &nbsp &nbsp | &nbsp &nbsp </p>
-            <p>info@woodmouldindia.com</p>
-          </form>
-        </div>
-      </nav>
-    </header>
+   </header>
+
 
     <main role="main">
 
